--- a/examples/less/examples.less
+++ b/examples/less/examples.less
@@ -93,7 +93,7 @@
 
     .box-header {
         text-align: center;
-        font-weight: 600;
+        font-weight: 400;
         padding: .5em 0;
     }
 
@@ -161,16 +161,14 @@
     .box-orange,
     .box-green,
     .box-blue {
-        -webkit-print-color-adjust: exact;
-
         .box-header {
-            background-color: black;
-            color: white;
+            background-color: transparent;
+            color: black;
         }
 
         .box-body {
-            background-color: white;
-            border: 2px solid black;
+            background-color: transparent;
+            border: none;
         }
     }
 }
