--- a/examples/css/examples.css
+++ b/examples/css/examples.css
@@ -75,7 +75,7 @@
 }
 .box .box-header {
   text-align: center;
-  font-weight: 600;
+  font-weight: 400;
   padding: .5em 0;
 }
 .box .box-body {
@@ -128,21 +128,16 @@
   .star-ratings .stars .title {
     color: black;
   }
-  .box-orange,
-  .box-green,
-  .box-blue {
-    -webkit-print-color-adjust: exact;
-  }
   .box-orange .box-header,
   .box-green .box-header,
   .box-blue .box-header {
-    background-color: black;
-    color: white;
+    background-color: transparent;
+    color: black;
   }
   .box-orange .box-body,
   .box-green .box-body,
   .box-blue .box-body {
-    background-color: white;
-    border: 2px solid black;
+    background-color: transparent;
+    border: none;
   }
 }
