--- a/themes/bars-1to10.less
+++ b/themes/bars-1to10.less
@@ -1,4 +1,5 @@
 @import "variables.less";
+@import "mixins.less";
 
 .br-theme-bars-1to10 {
 
@@ -39,11 +40,15 @@
 
     .br-widget {
       a {
-        background: lighten(black, 70%);
+        border: 1px solid lighten(black, 70%);
+        background: white;
+        height: 38px;
+        .box-sizing(border-box);
 
         &.br-active,
         &.br-selected {
-          background: black;
+          border: 1px solid black;
+          background: white;
         }
       }
 
