--- a/themes/bars-pill.less
+++ b/themes/bars-pill.less
@@ -1,4 +1,5 @@
 @import "variables.less";
+@import "mixins.less";
 
 .br-theme-bars-pill {
 
@@ -53,13 +54,22 @@
 
     .br-widget {
       a {
-        color: black;
-        background: lighten(black, 70%);
+        border: 1px solid lighten(black, 70%);
+        border-left: none;
+        background: white;
+        .box-sizing(border-box);
 
         &.br-active,
         &.br-selected {
-          background: black;
+          border: 1px solid black;
+          border-left: none;
+          background: white;
+          color: black;
         }
+      }
+
+      a:first-child {
+        border-left: 1px solid black;
       }
     }
 
