Deprecating wrapperClass option

--- a/examples/css/main.css
+++ b/examples/css/main.css
@@ -112,6 +112,9 @@ a:focus {
 p {
   margin: 0 0 1em 0;
 }
+.warning {
+  color: red;
+}
 .github {
   background-image: url("../img/github.png");
   position: fixed;
