--- a/examples/less/main.less
+++ b/examples/less/main.less
@@ -135,6 +135,10 @@ p {
     margin: 0 0 1em 0;
 }
 
+.warning {
+    color: red;
+}
+
 .github {
     .retina-image('../img/github.png', '../img/github@2x.png', 50px, 50px);
     position: fixed;
