Themes - read-only styling improved

--- a/themes/bars-1to10.less
+++ b/themes/bars-1to10.less
@@ -33,6 +33,16 @@
     }
   }
 
+  .br-readonly {
+    a.br-active, a.br-selected {
+      background-color: lighten(@orange-color, 10%);
+    }
+
+    .br-current-rating {
+      color: lighten(@orange-color, 10%);
+    }
+  }
+
 }
 
 @media print {
