--- a/themes/bars-reversed.less
+++ b/themes/bars-reversed.less
@@ -31,9 +31,14 @@
     }
   }
 
-  .br-readonly a.br-active,
-  .br-readonly a.br-selected {
-    background-color: @green-color;
+  .br-readonly {
+    a.br-active, a.br-selected {
+      background-color: lighten(@green-color, 10%);
+    }
+
+    .br-current-rating {
+      color: lighten(@green-color, 10%);
+    }
   }
 
 }
