--- a/themes/bars-movie.less
+++ b/themes/bars-movie.less
@@ -33,9 +33,14 @@
     }
   }
 
-  .br-readonly a.br-active,
-  .br-readonly a.br-selected {
-    background-color: @blue-color;
+  .br-readonly {
+    a.br-active, a.br-selected {
+      background-color: lighten(@blue-color, 10%);
+    }
+
+    .br-current-rating {
+      color: lighten(@blue-color, 10%);
+    }
   }
 
 }
