--- a/themes/bars-square.less
+++ b/themes/bars-square.less
@@ -41,9 +41,11 @@
     }
   }
 
-  .br-readonly a.br-active,
-  .br-readonly a.br-selected {
-    background-color: @blue-color;
+  .br-readonly {
+    a.br-active, a.br-selected {
+      border: 2px solid lighten(@blue-color, 10%);
+      color: lighten(@blue-color, 10%);
+    }
   }
 
 }
