--- a/themes/variables.less
+++ b/themes/variables.less
@@ -4,6 +4,6 @@
 @blue-color: #4278F5;
 
 // Stars
-@star-default: #ddd;
-@star-active: #ffdf88;
-@star-selected: #ffdf88;
+@star-default: #d2d2d2;
+@star-active: #EDB867;
+@star-selected: #EDB867;
