--- a/examples/less/examples.less
+++ b/examples/less/examples.less
@@ -64,14 +64,8 @@
         text-align: center;
     }
 
-    select {
-        width: 120px;
-        font-size: 16px;
-    }
-
     .stars {
         width: 120px;
-        float: left;
         text-align: center;
         margin: auto;
         padding: 0 95px;
@@ -81,7 +75,30 @@
             color: #cccccc;
             line-height: 3;
         }
+
+        select {
+            width: 120px;
+            font-size: 16px;
+        }
     }
+
+    .stars-example-fontawesome,
+    .stars-example-css,
+    .stars-example-bootstrap {
+        float: left;
+    }
+
+    .stars-example-fontawesome-o {
+        width: 200px;
+
+        select {
+            width: 200px;
+        }
+    }
+}
+
+.start-ratings-main {
+    margin-bottom: 3em;
 }
 
 /* Boxes */
