Flipped half-stars - adding inline-block property

--- a/themes/fontawesome-stars-o.less
+++ b/themes/fontawesome-stars-o.less
@@ -41,10 +41,12 @@
 
   .br-reverse {
     a.br-half {
+      display: inline-block;
       transform: scaleX(-1);
       -moz-transform: scaleX(-1);
       -webkit-transform: scaleX(-1);
-      -ms-transform: scaleX(-1);
+      filter: FlipH;
+      -ms-filter: "FlipH";
     }    
   }
 
