--- a/themes/fontawesome-stars-o.less
+++ b/themes/fontawesome-stars-o.less
@@ -39,6 +39,12 @@
     }
   }
 
+  .br-readonly {
+    a {
+      cursor: default;
+    }
+  }
+
   .br-reverse {
     a.br-half {
       display: inline-block;
