--- a/themes/bars-1to10.less
+++ b/themes/bars-1to10.less
@@ -34,8 +34,12 @@
   }
 
   .br-readonly {
-    a.br-active, a.br-selected {
-      background-color: lighten(@orange-color, 10%);
+    a {
+      cursor: default;
+
+      &.br-active, &.br-selected {
+        background-color: lighten(@orange-color, 10%);
+      }
     }
 
     .br-current-rating {
