--- a/themes/bars-pill.less
+++ b/themes/bars-pill.less
@@ -43,8 +43,12 @@
   }
 
   .br-readonly {
-    a.br-active, a.br-selected {
-      background-color: lighten(@green-color, 10%);
+    a {
+      cursor: default;
+
+      &.br-active, &.br-selected {
+        background-color: lighten(@green-color, 10%);
+      }
     }
   }
 
