--- a/themes/bars-reversed.less
+++ b/themes/bars-reversed.less
@@ -32,8 +32,12 @@
   }
 
   .br-readonly {
-    a.br-active, a.br-selected {
-      background-color: lighten(@green-color, 10%);
+    a {
+      cursor: default;
+
+      &.br-active, &.br-selected {
+        background-color: lighten(@green-color, 10%);
+      }
     }
 
     .br-current-rating {
