Adjusting br-theme-fontawesome-stars-o theme

--- a/themes/fontawesome-stars-o.less
+++ b/themes/fontawesome-stars-o.less
@@ -29,7 +29,7 @@
       color: @green-color;
     }
 
-    a.br-half:after {
+    a.br-fractional:after {
       content: '\f123';
       color: @green-color;
     }
@@ -46,7 +46,7 @@
   }
 
   .br-reverse {
-    a.br-half {
+    a.br-fractional {
       display: inline-block;
       transform: scaleX(-1);
       -moz-transform: scaleX(-1);
@@ -73,7 +73,7 @@
         color: black;
       }
 
-      a.br-half:after {
+      a.br-fractional:after {
         content: '\f123';
         color: black;
       }
