--- a/themes/bars-reversed.less
+++ b/themes/bars-reversed.less
@@ -14,6 +14,8 @@
       float: left;
       background-color: lighten(@green-color, 25%);
       margin: 1px;
+      line-height: 22px;
+      text-align: center;
 
       &.br-active,
       &.br-selected {
