A few more CSS changes in theme file

--- a/themes/bars-reversed.less
+++ b/themes/bars-reversed.less
@@ -14,12 +14,16 @@
       float: left;
       background-color: lighten(@green-color, 25%);
       margin: 1px;
-      line-height: 22px;
+      font-size: 15px;
+      font-weight: 400;
+      line-height: 1.4;
+      color: @green-color;
       text-align: center;
 
       &.br-active,
       &.br-selected {
         background-color: @green-color;
+        color: white;
       }
     }
 
